<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:background="@color/purple_500"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/change_location_bn"
            app:titleTextColor="@color/white"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:navigationIconTint="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@drawable/back1ground">

        <!-- Content here -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/select_division_bn"
                    android:layout_marginBottom="10dp"
                    style="@style/darkFont"/>
                <Spinner
                    android:id="@+id/divisionSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/spinner_bg1"
                    android:spinnerMode="dropdown"
                    android:dropDownVerticalOffset="48dp"
                    style="@style/darkFont" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/select_district_bn"
                    android:layout_marginBottom="10dp"
                    style="@style/darkFont"/>
                <Spinner
                    android:id="@+id/districtSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/spinner_bg1"
                    android:spinnerMode="dropdown"
                    android:dropDownVerticalOffset="48dp"
                    style="@style/darkFont" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:id="@+id/buttonChangeLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_positive_button"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/change_location_bn"
                        android:gravity="center"
                        style="@style/lightFont"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>